--- a/style.css
+++ b/style.css
@@ -93,3 +93,31 @@ input:focus {
     margin-bottom: 0.5rem;
     text-decoration: none;
 }
+
+@media screen and (max-width: 600px) {
+    /* Adjustments for smaller screens */
+    .card {
+        flex-direction: column;
+        padding: 2rem;
+    }
+
+    .avatar {
+        margin-bottom: 2rem;
+    }
+
+    .user-info {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    .user-info ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .repo {
+        font-size: 0.8rem;
+        margin-right: 0.3rem;
+        margin-bottom: 0.3rem;
+    }
+}
